--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,13 @@ buildscript {
   repositories {
     jcenter()
     maven { url 'https://maven.fabric.io/public' }
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.3'
+    classpath 'com.android.tools.build:gradle:3.1.3'
     classpath 'com.google.gms:google-services:3.0.0'
     classpath 'io.fabric.tools:gradle:1.21.7'
   }
@@ -22,6 +26,10 @@ allprojects {
     }
     maven {
       url "https://maven.google.com"
+    }
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
     }
   }
 }
