--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,22 +82,23 @@ android {
 }
 
 ext {
-  SUPPORT_LIBRARY_VERSION = "27.1.0"
+  SUPPORT_LIBRARY_VERSION = "27.1.1"
 }
 
 dependencies {
-  implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
-  implementation "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
-  implementation "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
-  implementation "com.android.support:support-v13:$SUPPORT_LIBRARY_VERSION"
-  implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
-  implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+  //noinspection GradleCompatible
+  compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+  compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+  compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+  compile "com.android.support:support-v13:$SUPPORT_LIBRARY_VERSION"
+  compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+  compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
 
-  stagingImplementation 'com.google.firebase:firebase-ads:15.0.1'
-  stagingImplementation 'com.anjlab.android.iab.v3:library:1.0.32'
+  stagingCompile 'com.google.firebase:firebase-ads:15.0.1'
+  stagingCompile 'com.anjlab.android.iab.v3:library:1.0.40'
 
-  freeImplementation 'com.google.firebase:firebase-ads:15.0.1'
-  freeImplementation 'com.anjlab.android.iab.v3:library:1.0.32'
+  freeCompile 'com.google.firebase:firebase-ads:15.0.1'
+  freeCompile 'com.anjlab.android.iab.v3:library:1.0.40'
   freeCompile 'com.jaredrummler:android-device-names:1.1.4'
 
   compile 'com.jrummyapps:sweetsweetdesserts:1.0.0'
@@ -107,25 +108,26 @@ dependencies {
   compile 'com.commit451:elasticdragdismisslayout:1.0.2'
   compile 'com.jrummyapps:texteditor:2.1.0'
 
+
   compile 'com.jrummyapps:downloader:2.0.0'
   compile 'com.jrummyapps:morphing-dialog:1.0.0'
   compile 'com.jrummyapps:html-builder:1.0.1'
   compile 'com.jrummyapps:legacy-obfuscate:1.0.0'
   implementation 'com.google.code.gson:gson:2.8.4'
 
-  implementation 'com.google.firebase:firebase-core:16.0.1'
+  compile 'com.google.firebase:firebase-core:16.0.1'
 
   /* Remote Config */
-  implementation 'com.google.firebase:firebase-config:16.0.0'
+  compile 'com.google.firebase:firebase-config:16.0.0'
 
   /* Firebase push notifications */
-  implementation 'com.google.firebase:firebase-messaging:17.0.0'
+  compile 'com.google.firebase:firebase-messaging:17.0.0'
 
   compile 'com.jaredrummler:animated-svg-view:1.0.5'
 
-  implementation 'com.android.support:multidex:1.0.3'
+  compile 'com.android.support:multidex:1.0.3'
 
-  implementation('com.google.android.ads.consent:consent-library:1.0.4') {
+  compile('com.google.android.ads.consent:consent-library:1.0.4') {
     transitive = true
     exclude group: "com.android.support"
   }
