--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,9 @@ repositories {
 }
 
 android {
-  compileSdkVersion 27
-  buildToolsVersion '27.0.3'
+  compileSdkVersion 26
+  buildToolsVersion '26.0.1'
 
-
-  flavorDimensions "default"
   productFlavors {
     free {
       applicationId "com.jrummy.busybox.installer"
@@ -63,7 +61,7 @@ android {
   defaultConfig {
     applicationId "com.jrummyapps.busybox"
     minSdkVersion 14
-    targetSdkVersion 27
+    targetSdkVersion 25
     versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
     versionName "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}${versionSuffix}"
     buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
@@ -82,11 +80,10 @@ android {
 }
 
 ext {
-  SUPPORT_LIBRARY_VERSION = "27.1.1"
+  SUPPORT_LIBRARY_VERSION = "26.1.0"
 }
 
 dependencies {
-  //noinspection GradleCompatible
   compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
   compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
   compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
@@ -95,10 +92,10 @@ dependencies {
   compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
 
   stagingCompile 'com.google.firebase:firebase-ads:15.0.1'
-  stagingCompile 'com.anjlab.android.iab.v3:library:1.0.40'
+  stagingCompile 'com.anjlab.android.iab.v3:library:1.0.32'
 
   freeCompile 'com.google.firebase:firebase-ads:15.0.1'
-  freeCompile 'com.anjlab.android.iab.v3:library:1.0.40'
+  freeCompile 'com.anjlab.android.iab.v3:library:1.0.32'
   freeCompile 'com.jaredrummler:android-device-names:1.1.4'
 
   compile 'com.jrummyapps:sweetsweetdesserts:1.0.0'
@@ -108,12 +105,11 @@ dependencies {
   compile 'com.commit451:elasticdragdismisslayout:1.0.2'
   compile 'com.jrummyapps:texteditor:2.1.0'
 
-
   compile 'com.jrummyapps:downloader:2.0.0'
   compile 'com.jrummyapps:morphing-dialog:1.0.0'
   compile 'com.jrummyapps:html-builder:1.0.1'
   compile 'com.jrummyapps:legacy-obfuscate:1.0.0'
-  implementation 'com.google.code.gson:gson:2.8.4'
+  compile 'com.google.code.gson:gson:2.8.4'
 
   compile 'com.google.firebase:firebase-core:16.0.1'
 
@@ -121,7 +117,7 @@ dependencies {
   compile 'com.google.firebase:firebase-config:16.0.0'
 
   /* Firebase push notifications */
-  compile 'com.google.firebase:firebase-messaging:17.0.0'
+  compile 'com.google.firebase:firebase-messaging:17.1.0'
 
   compile 'com.jaredrummler:animated-svg-view:1.0.5'
 
