--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+org.gradle.jvmargs=-Xmx1536M
 artifactory_url=http://artifactory.jrummyapps.com/artifactory/libs-release-local
 artifactory_username=jrummyapps
 artifactory_password=AP6YtcYUknM1nJb5r15weiJgs9d
